Universal build for 7.x and 8.x