@@ -1,3 +1,5 @@
+import org.gradle.util.internal.VersionNumber
+
 /*
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,7 +20,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "org.elasticsearch.gradle:build-tools:8.2.3"
+        classpath "org.elasticsearch.gradle:build-tools:$version"
     }
 }
 
@@ -32,8 +34,6 @@ repositories {
     }
     mavenCentral()
 }
-
-version = '8.2.3'
 
 esplugin {
     description 'English and Russian Morphology for ElasticSearch.'
@@ -50,21 +50,35 @@ configurations {
 }
 
 test {
-    /* workaround for "unable to install test security manager",
-    "The Security Manager is deprecated and will be removed in a future release" */
-    jvmArgs '-Djava.security.manager=allow'
+    /* A workaround is to disable the security manager during test
+       Java 17+:
+       "unable to install test security manager"
+       "The Security Manager is deprecated and will be removed in a future release" */
+    jvmArgs '-Dtests.security.manager=false'
 }
 
 yamlRestTest {
-    /* workaround for "unable to install test security manager",
-    "The Security Manager is deprecated and will be removed in a future release" */
-    jvmArgs '-Djava.security.manager=allow'
+    /* A workaround is to disable the security manager during test
+       Java 17+:
+       "unable to install test security manager"
+       "The Security Manager is deprecated and will be removed in a future release" */
+    jvmArgs '-Dtests.security.manager=false'
+}
+
+// use morph 1.6 for 8.x, 1.5 for 7.x
+VersionNumber versionNumber = VersionNumber.parse(version as String);
+if (versionNumber >= VersionNumber.parse('8.0.0')) {
+    ext.morphVersion = '1.6'
+} else if (versionNumber >= VersionNumber.parse('7.0.0')) {
+    ext.morphVersion = '1.5'
+} else {
+    throw new GradleException("Unsupported elasticsearch version ${version}")
 }
 
 dependencies {
     testRuntimeOnly 'org.apache.logging.log4j:log4j-core:2.17.2'
     yamlRestTestRuntimeOnly 'org.apache.logging.log4j:log4j-core:2.17.2'
-    implementation "org.apache.lucene.morphology:russian:1.6"
-    implementation "org.apache.lucene.morphology:english:1.6"
-    implementation "org.apache.lucene.morphology:morph:1.6"
+    implementation "org.apache.lucene.morphology:russian:${project.morphVersion}"
+    implementation "org.apache.lucene.morphology:english:${project.morphVersion}"
+    implementation "org.apache.lucene.morphology:morph:${project.morphVersion}"
 }
